[project]
authors = [
    {name = "Zachary Hampton", email = "zachary@bunsly.com"},
    {name = "Cullen Watson", email = "cullen@bunsly.com"},
]

requires-python = "<4.0,>=3.10"
dependencies = [
    "requests<3.0.0,>=2.31.0",
    "beautifulsoup4<5.0.0,>=4.12.2",
    "pandas<3.0.0,>=2.1.0",
    "NUMPY==1.26.3",
    "pydantic<3.0.0,>=2.3.0",
    "tls-client<2.0.0,>=1.0.1",
    "markdownify<1.0.0,>=0.13.1",
    "regex<2025.0.0,>=2024.4.28",
]
name = "python-jobspy"
version = "1.1.76"
description = "Job scraper for LinkedIn, Indeed, Glassdoor & ZipRecruiter"
readme = "README.md"
keywords = [
    "jobs-scraper",
    "linkedin",
    "indeed",
    "glassdoor",
    "ziprecruiter",
]

[project.urls]
homepage = "https://github.com/Bunsly/JobSpy"

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.1",
    "jupyter<2.0.0,>=1.0.0",
    "black",
    "pre-commit",
]
